# Self-Adapting-Recovery-Autonomous-Network

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo.py  vulnerable_sample.py
saran/: __init__.py  cli.py
saran/core/: __init__.py  config.py  events.py  models.py  orchestrator.py
saran/diagnosis/: __init__.py  planner.py
saran/healing/: __init__.py  patcher.py  sandbox.py
saran/intelligence/: __init__.py  base.py  claude.py  rule_based.py
saran/monitor/: __init__.py  health.py
saran/safety/: __init__.py  guardrails.py
saran/scanners/: __init__.py  base.py  dependency.py  quality.py  vulnerability.py
saran/verification/: __init__.py  verifier.py
tests/: test_guardrails.py  test_healing_loop.py  test_intelligence.py  test_scanners.py
